1999-08-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Better tests for -lnsl and -lsocket
	From: Albert Chin-A-Young <china@thewrittenword.com>

	Works for me - handle openlog() and -lgen the same way.

	* Makefile.am (EXTRA_DIST): Add in the y2k notes

	* parseutil/dcfd.c: Renamed drift_comp to accum_drift

	* configure.in: Added MAKE_CHECK_Y2K support; check_y2k needs libparse.
	* ntpd/Makefile.am (check_PROGRAMS): Use MAKE_CHECK_Y2K
	* ntpd/Makefile.am (check-local): Added.
	* parseutil/Makefile.am (check-local): Added.

	* include/ntp.h: Y2KFixes
	* libparse/parse.c: Ditto
	* ntpd/Makefile.am (check_PROGRAMS): Ditto
	* ntpd/refclock_acts.c: Ditto
	* ntpd/refclock_arc.c (arc_receive): Ditto
	* ntpd/refclock_heath.c: Ditto
	* ntpd/refclock_hpgps.c: Ditto
	* parseutil/Makefile.am (check-local): Ditto
	* parseutil/dcfd.c (check_y2k): Ditto
	* NOTES.y2kfixes: Ditto
	* readme.y2kfixes: Ditto
	* results.y2kfixes: Ditto
	* ntpd/check_y2k.c: Ditto
	From: y2k@y2k.labs.att.com

1999-08-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Look for sys/ppstime.h.

1999-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_io.c (create_sockets): Typo.
	From: Doug Wells <dmw@contek.com>

1999-07-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_cv_struct_ntptimeval): Explicitly look for
	struct ntptimeval.
	(ac_cv_var_kernel_pll): Require struct ntptimeval.
	Linux.  Grrr.
	Reported by: Ronald Kuetemeier <ronaldk@smginc.com>

1999-07-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.95
	
	* ports/winnt: New release
	From: Sven Dietrich <Sven_Dietrich@trimble.com> 

1999-07-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/machines.c (ntp_set_tod): Bugfix
	From: Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

1999-07-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.94b

	* acconfig.h:
	* configure.in:
	* libparse/Makefile.am:
	* libparse/parse_conf.c:
	* libparse/clk_varitext.c: