@@ -1,3 +1,6 @@
+* -lnsl, -lsocket, -lgen configuration patches
+* Y2K patches from AT&T
+* Linux portability cruft
 (4.0.95)
 * NT port cleanup/replacement
 * a few portability fixes
